# PoliticIT23-ideology-detection

./: README.md
transformer-based_models/: README.md  compute_scores.py  compute_scores_old.py  config_parameters.py  inference.py  main.py  pyproject.toml  trainer.py  tune_parameters.py  tune_trainer.py  validate.py
transformer-based_models/data/: data_preprocessor.py  dataset_classes.py
transformer-based_models/datasets/: development_es.csv
transformer-based_models/models/: models.py
transformer-based_models/results/bert_res_it/: decoded_results.csv  tuning_results.jsonl
transformer-based_models/results/xlm_res_es/: decoded_results.csv  tuning_results.jsonl
transformer-based_models/results/xlm_res_it/: decoded_results.csv  tuning_results.jsonl
transformer-based_models/results/xlm_res_it-es/: decoded_results.csv  tuning_results.jsonl
