[tool.poetry]
name = "EVALITA_2023_multi"
version = "0.1.0"
description = "EVALITA-2023 PoliticIT multitask-transfer learning"
authors = ["Matteo Brivio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
transformers = "^4.26.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
typer = "^0.7.0"
ray = {extras = ["default"], version = "^2.3.0"}
tabulate = "^0.9.0"

# remove
sentencepiece = "^0.1.98"
emoji = "^2.2.0"
ekphrasis = "^0.5.4"
ftfy = "^6.1.1"
bayesian-optimization = "^1.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
